<resources>
    <string name="app_name">3D直播</string>

    <!-- 腾讯小程序相关string -->
    <!-- msgadapter -->
    <item type="id" name="tag_first"></item>
    <item type="id" name="tag_second"></item>

    <!-- permission check-->
    <string name="float_window_not_allow">悬浮窗权限未开启 请在应用-权限中打开悬浮窗权限</string>

    <string name="dialog_input_text_hint">开启弹幕互动吧</string>


    <!-- 业务相关 -->
    <!-- Login -->
    <string name="login_hint_text">用户名：</string>
    <string name="password_hint_text">密码：</string>
    <string name="repeat_password_hint_text">重复密码：</string>

    <!-- live play -->
    <string name="send">发送</string>
    <string name="username">userName</string>
    <string name="login_btn_text">登录</string>
    <string name="loading_text">加载中</string>
    <string name="login_loading_text">登录中，请稍候！</string>
    <string name="close_btn">关闭按钮</string>
    <string name="register_and_login">注册并登录</string>
    <string name="register_loading">注册中</string>
    <string name="user_head">user_head</string>
    <string name="live_input_text">说些什么...</string>

    <!-- live play -->
    <string name="live_end_tips">直播结束啦!</string>
    <string name="live_time_tips">直播时长</string>
    <string name="live_members_tips">观看人数</string>
    <string name="live_admires_tips">获赞数量</string>
    <string name="btn_return_home">返回首页</string>
    <string name="image_background">image_background</string>

    <string name="upload_text">上传中</string>
    <string name="request_text">请求中</string>

</resources>