<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkTransparentGray"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDarkTransparentGray"
        android:gravity="center"
        android:padding="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/live_end_tips"
            android:textColor="@color/colorLight"
            android:textSize="24sp" />
        <!-- 直播时长 -->
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:textColor="@color/colorTextWhite"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/live_time_tips"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/sub_content" />
        <!-- 观看人数 -->
        <TextView
            android:id="@+id/tv_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textColor="@color/colorTextWhite"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/live_members_tips"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/sub_content" />
        <!-- 获赞数量 -->
        <TextView
            android:id="@+id/tv_admires"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textColor="@color/colorTextWhite"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/live_admires_tips"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/sub_content" />

        <TextView
            android:id="@+id/anchor_btn_cancel"
            android:layout_width="225dp"
            android:layout_height="35dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/btn_return_home"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/title" />
    </LinearLayout>
</ScrollView>
