<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 注册标题栏 -->
        <FrameLayout
            android:id="@+id/close_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorTextWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/close_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/close_btn"
                android:padding="10dp"
                android:src="@mipmap/close_icon" />
        </FrameLayout>

        <!-- 登录名 -->
        <EditText
            android:id="@+id/register_userName_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:autofillHints="username"
            android:hint="@string/login_hint_text"
            android:inputType="text"
            android:textColorHint="@color/edit_hint_text"
            android:drawableStart="@mipmap/username_icon"
            android:drawablePadding="10dp"
            android:background="@drawable/myspace_bg_5"
            android:padding="10dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/close_layout" />

        <!-- 登录密码 -->
        <EditText
            android:id="@+id/register_password_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:autofillHints="password"
            android:hint="@string/password_hint_text"
            android:inputType="text"
            android:textColorHint="@color/edit_hint_text"
            android:drawableStart="@mipmap/password_icon"
            android:background="@drawable/myspace_bg_5"
            android:drawablePadding="10dp"
            android:textSize="16sp"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_userName_edt"
            tools:ignore="TextFields" />

        <!-- 重复密码 -->
        <EditText
            android:id="@+id/repeat_register_password_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:autofillHints="password"
            android:hint="@string/repeat_password_hint_text"
            android:inputType="text"
            android:textColorHint="@color/edit_hint_text"
            android:drawableStart="@mipmap/password_icon"
            android:background="@drawable/myspace_bg_5"
            android:drawablePadding="10dp"
            android:textSize="16sp"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_edt"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="25dp"
            android:text="@string/register_and_login"
            android:drawableEnd="@mipmap/right_blue_icon"
            android:drawablePadding="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>