<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_background">

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:minHeight="80dp"
            android:orientation="horizontal"
            android:src="@mipmap/login_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="H,2:4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.25"
            android:contentDescription="icon" />

        <!-- 登录名 -->
        <EditText
            android:id="@+id/userName_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:autofillHints="username"
            android:hint="@string/login_hint_text"
            android:inputType="text"
            android:textColorHint="@color/edit_hint_text"
            android:drawableLeft="@mipmap/username_icon"
            android:drawablePadding="10dp"
            android:background="@drawable/myspace_bg_5"
            android:padding="10dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_img" />

        <!-- 登录密码 -->
        <EditText
            android:id="@+id/password_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:autofillHints="password"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword"
            android:textColorHint="@color/edit_hint_text"
            android:drawableLeft="@mipmap/password_icon"
            android:background="@drawable/myspace_bg_5"
            android:drawablePadding="10dp"
            android:textSize="16sp"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName_edt" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:background="@drawable/myspace_bg_5"
            android:text="@string/login_btn_text"
            android:textSize="16sp"
            android:layout_margin="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

            <ImageView
                android:id="@+id/register_img"
                android:src="@mipmap/register_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:minHeight="50dp"
                app:layout_constraintTop_toBottomOf="@+id/login_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/phone_img"
                />

        <ImageView
            android:id="@+id/phone_img"
            android:src="@mipmap/phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/register_img"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>